@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
      
+    17: AstroFloyd, 13/02/2009
+      added lambda_env to plotplt(n)
+	
     14: AstroFloyd, 11/02/2009
        plotplt:
         - add lambda_ce
